# scrytch

./: README.md  engine.py  main.py  pyproject.toml  scrython.py
.github/workflows/: publish.yml  python-publish.yml
src/: engine.py  events.py  keys.py  looks.py  motion.py  scrython.py  sensing.py  sound.py  sprite.py
