[project]
name = "Scrytch"
version = "1.0.0"
authors = [
  { name="Kian Metzsch", email="contact@ckm-tech.dev" },
]
description = "A Python project which imitates Scratch game logic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.0"
]
classifiers = [
    "Intended Audience :: Education",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/k-metzsch/scrytch"
Issues = "https://github.com/k-metzsch/scrytch/issues"
